feat: Add AWS Lambda serverless deployment with SAM template and Spring Boot handle